Backport changes from v7