@@ -5,6 +5,9 @@ import java.util.List;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import graphql.Scalars;
 import graphql.scalars.ExtendedScalars;
 import graphql.schema.GraphQLArgument;
@@ -52,6 +55,8 @@ import static com.enonic.app.guillotine.graphql.helper.GraphQLHelper.outputField
 
 public class ContentTypesFactory
 {
+    private static final Logger LOG = LoggerFactory.getLogger( ContentTypesFactory.class );
+
     private final GuillotineContext context;
 
     private final ServiceFacade serviceFacade;
@@ -81,9 +86,18 @@ public class ContentTypesFactory
         Pattern allowedContentTypesPattern = generateAllowedContentTypeRegexp();
 
         List<ContentType> contentTypes = serviceFacade.getContentTypeService().getAll().stream().filter(
-            contentType -> allowedContentTypesPattern.matcher( contentType.getName().toString() ).find() ).collect( Collectors.toList() );
+            contentType -> allowedContentTypesPattern.matcher( contentType.getName().toString() ).find() ).toList();
 
-        contentTypes.forEach( contentType -> createContentObjectType( contentType, contentInterface ) );
+        contentTypes.forEach( contentType -> {
+            try
+            {
+                createContentObjectType( contentType, contentInterface );
+            }
+            catch ( Exception e )
+            {
+                LOG.warn( "Failed to generate GraphQL type for content type '{}'", contentType.getName(), e );
+            }
+        } );
     }
 
     private void createQueryDslContentConnectionType()
@@ -146,9 +160,12 @@ public class ContentTypesFactory
         if ( !formItems.isEmpty() )
         {
             GraphQLObjectType dataObject = generateContentDataType( typeName, typeDescription, formItems );
-            fields.add( outputField( "data", dataObject ) );
+            if ( dataObject != null )
+            {
+                fields.add( outputField( "data", dataObject ) );
 
-            context.registerType( dataObject.getName(), dataObject );
+                context.registerType( dataObject.getName(), dataObject );
+            }
         }
 
         GraphQLObjectType contentObject = newObject( context.uniqueName( typeName ), typeDescription, List.of( contentInterface ), fields );
@@ -187,18 +204,40 @@ public class ContentTypesFactory
         String typeName = context.uniqueName( parentTypeName + "_Data" );
         String description = parentDescription + " data";
 
-        List<GraphQLFieldDefinition> fields = formItems.stream().map( formItem -> {
-            String fieldName = StringNormalizer.create( formItem.getName() );
+        List<GraphQLFieldDefinition> fields = new ArrayList<>();
+        for ( FormItem formItem : formItems )
+        {
+            String rawFieldName = formItem.getName();
+            try
+            {
+                String normalizedFieldName = StringNormalizer.create( rawFieldName );
 
-            GraphQLOutputType formItemObject = (GraphQLOutputType) formItemTypesFactory.generateFormItemObject( parentTypeName, formItem );
+                GraphQLOutputType formItemObject =
+                    (GraphQLOutputType) formItemTypesFactory.generateFormItemObject( parentTypeName, formItem );
 
-            GraphQLFieldDefinition field =
-                outputField( fieldName, formItemObject, formItemTypesFactory.generateFormItemArguments( formItem ) );
+                if ( formItemObject == null )
+                {
+                    continue;
+                }
 
-            context.registerDataFetcher( typeName, fieldName, new FormItemDataFetcher( formItem, serviceFacade, context ) );
+                GraphQLFieldDefinition field =
+                    outputField( normalizedFieldName, formItemObject, formItemTypesFactory.generateFormItemArguments( formItem ) );
 
-            return field;
-        } ).collect( Collectors.toList() );
+                context.registerDataFetcher( typeName, normalizedFieldName, new FormItemDataFetcher( formItem, serviceFacade, context ) );
+
+                fields.add( field );
+            }
+            catch ( Exception e )
+            {
+                LOG.warn( "Failed to generate GraphQL field for GraphQL type '{}' on formItem with raw name '{}'", parentTypeName,
+                          rawFieldName, e );
+            }
+        }
+
+        if ( fields.isEmpty() )
+        {
+            return null;
+        }
 
         return newObject( typeName, description, fields );
     }
@@ -255,8 +294,8 @@ public class ContentTypesFactory
                                           newArgument( "sort", Scalars.GraphQLString ) ) ) );
         result.add( outputField( "permissions", GraphQLTypeReference.typeRef( "Permissions" ) ) );
 
-        context.registerDataFetcher( contentType, "contentType",
-                                     new ContentTypeDataFetcher( serviceFacade.getCmsFormFragmentService(), serviceFacade.getContentTypeService() ) );
+        context.registerDataFetcher( contentType, "contentType", new ContentTypeDataFetcher( serviceFacade.getCmsFormFragmentService(),
+                                                                                             serviceFacade.getContentTypeService() ) );
 
         context.registerDataFetcher( contentType, "_references", new GetContentReferencesDataFetcher( serviceFacade.getContentService() ) );
 
